# DevExForge

./: .gitignore  .travis.yml  CLAUDE.md  README.md  docker-compose.yaml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_add_cluster_column.py  003_add_catalog_and_admin_tables.py  004_add_constraints_indexes_triggers.py  005_add_applications.py  006_add_promotion_governance.py  007_add_image_repo_to_applications.py
api/app/: config.py  database.py  main.py
api/app/middleware/: auth.py
api/app/models/: __init__.py  admin.py  application.py  audit.py  catalog.py  environment.py  promotion.py  team.py
api/app/routers/: admin.py  applications.py  audit.py  catalog.py  environments.py  gates.py  health.py  members.py  observability.py  promotion.py  promotions.py  rollouts.py  security.py  teams.py
api/app/schemas/: admin.py  application.py  audit.py  catalog.py  environment.py  promotion.py  team.py
api/tests/: conftest.py  test_application_deploy.py  test_applications.py  test_argocd_sync.py  test_environments.py  test_gate_service.py  test_gates_router.py  test_health.py  test_members.py  test_policy_service.py  test_promotion_service.py  test_promotions_router.py  test_rollout_service.py  test_teams.py
cli/: README.md  pyproject.toml
cli/devex/: client.py  main.py  output.py  profiles.py
dev/: setup.sh  (+9 more)
operator/: Dockerfile  README.md  helpers.py  main.py  pyproject.toml
operator/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
operator/handlers/: environment_handler.py  team_handler.py
(+94 files in other folders)
