[project]
name = "devexforge-operator"
version = "0.1.0"
description = "Kopf-based Kubernetes operator for DevExForge"
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.37.0",
    "kubernetes>=28.1.0",
    "pydantic>=2.5.0",
]

[project.scripts]
devexforge-operator = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
